Bug 468410 - Removable Devices unplugged table have many records that cause stuttering
Summary: Removable Devices unplugged table have many records that cause stuttering
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_deviceautomounter (other bugs)
Version First Reported In: unspecified
Platform: Manjaro Linux
: NOR normal
Target Milestone: ---
Assignee: Torrie Fischer
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-04-12 02:05 UTC by ycj214@163.com
Modified: 2023-04-21 13:27 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.27.5
Sentry Crash Report:


Attachments
too many records that cause stuttering, hope to paginate (111.66 KB, image/png)
2023-04-12 02:05 UTC, ycj214@163.com
Details
no discribe record many times (59.23 KB, image/png)
2023-04-14 02:16 UTC, ycj214@163.com
Details
my disk 1 (107.22 KB, image/png)
2023-04-14 02:20 UTC, ycj214@163.com
Details
my disk2 (127.08 KB, image/png)
2023-04-14 02:20 UTC, ycj214@163.com
Details
/org/kde/fstab/overlay/var/lib/docker/overlay2 mount record here (513.07 KB, image/png)
2023-04-14 05:55 UTC, ycj214@163.com
Details
solid-hardware list details` and `cat /etc/mtab` (38.90 KB, text/plain)
2023-04-20 05:37 UTC, ycj214@163.com
Details

Note You need to log in before you can comment on or make changes to this bug.
Description ycj214@163.com 2023-04-12 02:05:43 UTC
Created attachment 158027 [details]
too many records that cause stuttering, hope to paginate

SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***


STEPS TO REPRODUCE
1.  my computer is thinkpad E440,I have added disk storage in the CD-ROM disk drive . When my computer turns on,it record the removable drive. day after day,  this will generate a large number of records
2. next time you want to open the Removable devices automounter configuration module , you well get a lag and no response


OBSERVED RESULT


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Nate Graham 2023-04-13 18:51:43 UTC
Are you saying that it re-records the same disc? Or that it adds a new record for each inserted disc?
Comment 2 ycj214@163.com 2023-04-14 02:16:36 UTC
Created attachment 158090 [details]
no discribe record many times

no discribe record many times .
Comment 3 ycj214@163.com 2023-04-14 02:17:15 UTC
(In reply to Nate Graham from comment #1)
> Are you saying that it re-records the same disc? Or that it adds a new
> record for each inserted disc?

see this pic   https://bugs.kde.org/attachment.cgi?id=158090
Comment 4 ycj214@163.com 2023-04-14 02:20:01 UTC
Created attachment 158091 [details]
my disk 1
Comment 5 ycj214@163.com 2023-04-14 02:20:18 UTC
Created attachment 158092 [details]
my disk2
Comment 6 ycj214@163.com 2023-04-14 05:41:02 UTC
(In reply to Nate Graham from comment #1)
> Are you saying that it re-records the same disc? Or that it adds a new
> record for each inserted disc?

Because there is no descriptive information in the record, I don't know if it was repeatedly mounted, but there are probably duplicate records because these records are growing rapidly.

I placed a hard drive in the CD location and divided it into several zones. Every time the system boots and logs in, there will be some records without descriptive information. Due to the fact that there is no pagination here, when the data volume is too large, the page loads very slowly and almost cannot be accessed. Please refer to the attachment I passed on.
Comment 7 ycj214@163.com 2023-04-14 05:55:25 UTC
Created attachment 158094 [details]
/org/kde/fstab/overlay/var/lib/docker/overlay2  mount record here

Maybe the Docker's mount record is also displayed here
Comment 8 Nate Graham 2023-04-18 23:56:47 UTC
So the problem is that the page fills up with list items that have no text so you can't see what they are?
Comment 9 ycj214@163.com 2023-04-19 03:15:18 UTC
(In reply to Nate Graham from comment #8)
> So the problem is that the page fills up with list items that have no text
> so you can't see what they are?

It's not just about this issue. Not having text prompts is not important. The important thing is that these data will be recorded every time you log in and restart, which leads to the rapid growth of data here. There may be more than 10 pieces of data every day. Without paging, it is too laggy when you come in, and it takes more than 10 seconds to open.
Comment 10 Harald Sitter 2023-04-19 14:35:01 UTC
Please paste your version information. 

Also, please paste the output of `solid-hardware list details` and `cat /etc/mtab`
Comment 11 ycj214@163.com 2023-04-20 05:37:10 UTC
Created attachment 158224 [details]
solid-hardware list details` and `cat /etc/mtab`
Comment 12 Bug Janitor Service 2023-04-21 11:46:33 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/1484
Comment 13 Harald Sitter 2023-04-21 13:21:50 UTC
Git commit a7043760b252889c405ee3585ee16af6f779d2f3 by Harald Sitter.
Committed on 21/04/2023 at 11:46.
Pushed by sitter into branch 'master'.

automounter: don't track ignored devices

this was effectively leaking docker mounts into the state file over time

M  +1    -1    solid-device-automounter/kded/DeviceAutomounter.cpp

https://invent.kde.org/plasma/plasma-desktop/commit/a7043760b252889c405ee3585ee16af6f779d2f3
Comment 14 Harald Sitter 2023-04-21 13:27:32 UTC
Git commit b7f8e895a60f858f816374861419cc1998953aff by Harald Sitter.
Committed on 21/04/2023 at 13:22.
Pushed by sitter into branch 'Plasma/5.27'.

automounter: don't track ignored devices

this was effectively leaking docker mounts into the state file over time


(cherry picked from commit a7043760b252889c405ee3585ee16af6f779d2f3)

M  +1    -1    solid-device-automounter/kded/DeviceAutomounter.cpp

https://invent.kde.org/plasma/plasma-desktop/commit/b7f8e895a60f858f816374861419cc1998953aff