automounter: don't track ignored devices

this was effectively leaking docker mounts into the state file over time

BUG: 468410


(cherry picked from commit a7043760b252889c405ee3585ee16af6f779d2f3)